--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint --ext .ts,.tsx,.js,.jsx .",
     "lint:fix": "prettier --check '**/*.{js,jsx,ts,tsx,css}'",
     "type-check": "tsc --noEmit",
-    "prepare": "husky install"
+    "postinstall": "husky install"
   },
   "husky": {
     "hooks": {}
