--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start": "ts-node-dev src/index.ts",
     "lint": "eslint --ext .ts,.tsx,.js,.jsx .",
     "lint:fix": "prettier --check '**/*.{js,jsx,ts,tsx,css}'",
-    "type-check": "tsc --noEmit",
-    "postinstall": "husky install"
+    "type-check": "tsc --noEmit"
   },
   "husky": {
     "hooks": {}
