--- a/package.json
+++ b/package.json
@@ -19,19 +19,26 @@
   "devDependencies": {
     "@commitlint/cli": "^16.1.0",
     "@commitlint/core": "^16.1.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "commitlint-config-gitmoji": "^2.2.5",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.3",
-    "commitlint-config-gitmoji": "^2.2.5",
     "prettier": "^2.5.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "body-parser": "^1.19.2",
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "mongoose": "^6.2.8"
+    "express-validation": "^3.0.8",
+    "joi": "^17.6.0",
+    "mongoose": "^6.2.8",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
