:sparkles: feat: add login route

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 PORT=4000
+JWT_SECRET=supersecretjwtsecret
+JWT_REFRESH_TOKEN_SECRET=refreshtokensecret
+JWT_TOKEN_LIFE=900
+JWT_REFRESH_TOKEN_LIFE=86400
 MONGODB_CONNECTION=yourmongodbconnection
