--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "commitlint-config-gitmoji": "^2.2.5",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.3",
@@ -37,6 +38,7 @@
     "express-validation": "^3.0.8",
     "express-winston": "^4.2.0",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
