--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "ts-node-dev src/index.ts",
     "lint": "eslint --ext .ts,.tsx,.js,.jsx .",
     "lint:fix": "prettier --check '**/*.{js,jsx,ts,tsx,css}'",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "generateKeyPair": "node generateKeyPair"
   },
   "husky": {
     "hooks": {}
@@ -19,7 +20,6 @@
   "devDependencies": {
     "@commitlint/cli": "^16.1.0",
     "@commitlint/core": "^16.1.0",
-    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
@@ -31,8 +31,8 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-validation": "^3.0.8",
@@ -40,6 +40,7 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
+    "node-cache": "^5.1.2",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "winston": "^3.6.0"
