--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint --ext .ts,.tsx,.js,.jsx .",
     "lint:fix": "prettier --check '**/*.{js,jsx,ts,tsx,css}'",
     "type-check": "tsc --noEmit",
-    "generateKeyPair": "node generateKeyPair"
+    "generateKeyPair": "node generateKeyPair",
+    "seed": "ts-node-dev src/models/seeds/userSeeder.ts"
   },
   "husky": {
     "hooks": {}
