--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/passport": "^1.0.7",
     "@types/passport-jwt": "^3.0.6",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "commitlint-config-gitmoji": "^2.2.5",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.3",
@@ -46,6 +48,8 @@
     "node-cache": "^5.1.2",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.3.0",
     "winston": "^3.6.0"
   },
   "lint-staged": {
