--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
+    "clsx": "^1.1.1",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -35,6 +36,7 @@
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.1",
     "eslint-plugin-storybook": "^0.5.7",
+    "eslint-plugin-tailwindcss": "^3.5.0",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.6.3"
