--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,4 +1,8 @@
 {
   "plugins": ["tailwindcss"],
-  "extends": ["next/core-web-vitals", "plugin:storybook/recommended"]
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:storybook/recommended",
+    "plugin:tailwindcss/recommended"
+  ]
 }
