--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
     "clsx": "^1.1.1",
+    "framer-motion": "^6.2.8",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
