--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.28.1",
     "react-redux": "^7.2.6"
   },
   "devDependencies": {
