:whale: feat: finalize docker setup

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -16,5 +16,7 @@ COPY . .
 # our app is running on port 4000 within the container, so need to expose it
 EXPOSE 4000
 
+RUN npm run generateKeyPair
+
 # the command that starts our app
 CMD ["npm", "start"]
