--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.28.1",
-    "react-redux": "^7.2.6"
+    "react-redux": "^7.2.6",
+    "react-use": "^17.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
