--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "clsx": "^1.1.1",
     "framer-motion": "^6.2.8",
     "next": "12.1.1",
+    "next-redux-cookie-wrapper": "^2.1.2",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
