--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,12 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@reduxjs/toolkit": "^1.8.0",
     "clsx": "^1.1.1",
+    "date-fns": "^2.28.0",
     "framer-motion": "^6.2.8",
     "next": "12.1.1",
     "next-redux-wrapper": "^7.0.5",
@@ -20,7 +24,8 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.28.1",
     "react-redux": "^7.2.6",
-    "react-use": "^17.3.2"
+    "react-use": "^17.3.2",
+    "remove": "^0.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
