--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,8 @@
     "react-hook-form": "^7.28.1",
     "react-redux": "^7.2.6",
     "react-use": "^17.3.2",
-    "remove": "^0.1.5"
+    "remove": "^0.1.5",
+    "usehooks-ts": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
