--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.28.1",
+    "react-pay-icons": "^2.0.1",
     "react-redux": "^7.2.6",
     "react-use": "^17.3.2",
     "remove": "^0.1.5",
