--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -6,8 +6,14 @@ COPY package*.json ./
 
 RUN npm install
 
+RUN npm install http-server -g
+
 COPY . .
+
+RUN npm run build
+
+RUN npm run export
 
 EXPOSE 3000
 
-CMD ["npm", "run", "dev"]
+CMD ["http-server", '-p', '3000']
