--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^2.28.0",
     "framer-motion": "^6.2.8",
     "next": "12.1.1",
+    "next-pwa": "^5.4.6",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
