--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -6,14 +6,10 @@ COPY package*.json ./
 
 RUN npm install
 
-RUN npm install http-server -g
-
 COPY . .
-
-RUN npm run build
-
-RUN npm run export
 
 EXPOSE 3000
 
-CMD ["http-server", '-p', '3000']
+RUN npm run build
+
+CMD ["npm", "run", "start"]
