--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,26 @@
 version: "3.8"
 services:
     nodeserver:
+        image: public.ecr.aws/e1a2d2m5/exptrackr:nodeserver
         build:
             context: ./app
         ports:
             - "4000:4000"
+        container_name: nodeserver
+        env_file:
+            - ./app/.env
     client:
+        image: public.ecr.aws/e1a2d2m5/exptrackr:client
         build:
             context: ./client
         ports:
             - "3000:3000"
+        container_name: client
     nginx:
+        image: public.ecr.aws/e1a2d2m5/exptrackr:nginx
         restart: always
         build:
             context: ./nginx
         ports:
             - "80:80"
+        container_name: nginx
