--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,14 +21,36 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref : develop
-      # Building Heroku Deployment with Container Registry - Update    
-      - name: Build, Push and Release a Docker container to Heroku
+      # Building Heroku Deployment with Container Registry - Update
+      - name: Build, Push and Release a Docker container to Heroku - nginx
         uses: gonuit/heroku-docker-deploy@v1.3.3
         with:
           email: ${{ secrets.HEROKU_EMAIL }}
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
-          dockerfile_directory: ./
+          dockerfile_directory: ../app
           dockerfile_name: Dockerfile
           docker_options: "--no-cache"
-          process_type: web
+          process_type: nginx
+      - name: Build, Push and Release a Docker container to Heroku - app
+        uses: gonuit/heroku-docker-deploy@v1.3.3
+        with:
+          email: ${{ secrets.HEROKU_EMAIL }}
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
+          dockerfile_directory: ../app
+          dockerfile_name: Dockerfile
+          docker_options: "--no-cache"
+          process_type: app
+      - name: Build, Push and Release a Docker container to Heroku - client
+        uses: gonuit/heroku-docker-deploy@v1.3.3
+        with:
+          email: ${{ secrets.HEROKU_EMAIL }}
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
+          dockerfile_directory: ../client
+          dockerfile_name: Dockerfile
+          docker_options: "--no-cache"
+          process_type: client
+      
+  
