--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,28 +1,19 @@
-# This is a basic workflow to help you get started with Actions
 name: Deploy container to Heroku Server in Production
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ develop ]
   pull_request:
     branches: [ develop ]
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
         with:
           ref : develop
-      # Building Heroku Deployment with Container Registry - Update
-      - name: Build, Push and Release a Docker container to Heroku - app
+      - name: Build, Push and Release a Docker container to Heroku - api
         uses: gonuit/heroku-docker-deploy@v1.3.3
         with:
           email: ${{ secrets.HEROKU_EMAIL }}
@@ -32,7 +23,7 @@ jobs:
           dockerfile_name: Dockerfile
           docker_options: "--no-cache"
           process_type: web
-      - name: Build, Push and Release a Docker container to Heroku - web
+      - name: Build, Push and Release a Docker container to Heroku - client
         uses: gonuit/heroku-docker-deploy@v1.3.3
         with:
           email: ${{ secrets.HEROKU_EMAIL }}
