--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -1,4 +1,6 @@
 server {
+    listen 0.0.0.0:$PORT;
+
     location / {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
