--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,35 +13,13 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref : develop
-      - name: Build, Push and Release a Docker container to Heroku - nginx
+      - name: Build, Push and Release a Docker container to Heroku
         uses: gonuit/heroku-docker-deploy@v1.3.3
         with:
           email: ${{ secrets.HEROKU_EMAIL }}
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
-          dockerfile_directory: ./nginx
-          dockerfile_name: Dockerfile.prod
-          docker_options: "--no-cache"
-          process_type: web
-      - name: Build, Push and Release a Docker container to Heroku - api
-        uses: gonuit/heroku-docker-deploy@v1.3.3
-        with:
-          email: ${{ secrets.HEROKU_EMAIL }}
-          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: ${{ secrets.HEROKU_APP_NAME_API }}
-          dockerfile_directory: ./app
+          dockerfile_directory: ./
           dockerfile_name: Dockerfile
           docker_options: "--no-cache"
           process_type: web
-      - name: Build, Push and Release a Docker container to Heroku - client
-        uses: gonuit/heroku-docker-deploy@v1.3.3
-        with:
-          email: ${{ secrets.HEROKU_EMAIL }}
-          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: ${{ secrets.HEROKU_APP_NAME_CLIENT }}
-          dockerfile_directory: ./client
-          dockerfile_name: Dockerfile
-          docker_options: "--no-cache"
-          process_type: web
-      
-  
