--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,8 @@
 version: "3.8"
 services:
-    nodeserver:
+    app:
         build:
-            context: ./app
+            context: .
         ports:
             - "4000:4000"
-        container_name: nodeserver
-        env_file:
-            - ./app/.env
-    client:        
-        build:
-            context: ./client
-        ports:
-            - "3000:3000"
-        container_name: client
-    nginx:
-        restart: always
-        build:
-            context: ./nginx
-        ports:
-            - "80:80"
-        container_name: nginx
+        container_name: app
