--- a/client/.gitignore
+++ b/client/.gitignore
@@ -36,6 +36,8 @@ yarn-error.log*
 
 #pwa
 **/public/workbox-*.js
+**/public/workbox-*.js.map
 **/public/sw.js
+**/public/sw.js.map
 **/public/precache.*.js
 **/public/worker-*.js
